# ai-multiagent-system

./: .env.example  .gitignore  NEXUS_AGENT.md  README.md  TESTING.md  package-lock.json  package.json  requirements.txt
app/: layout.tsx  page.tsx
app/api/agents/audit-logs/: route.ts
app/api/agents/details/: route.ts
app/api/agents/execute/: route.ts
app/api/agents/executions/: route.ts
app/api/agents/status/: route.ts
app/api/agents/workflow/: route.ts
components/dashboard/: agent-dashboard.tsx  agent-stats.tsx  audit-log-viewer.tsx  error-monitor.tsx  execution-list.tsx  execution-monitor.tsx  workflow-builder.tsx
lib/: prisma.ts
prisma/: schema.prisma
scripts/: 01-init-schema.sql  test-setup.js
scripts/agents/: __init__.py  agent_builder.py  database.py  error_handler.py  executor.py  pyproject.toml  tools.py  types.py
